Updates doc with correct signer syntax, using discovery API, clarifications and spelling/grammar
Signed-off-by: joshvanl <vleeuwenjoshua@gmail.com>

--- a/design/20190708.certificate-request-crd.md
+++ b/design/20190708.certificate-request-crd.md
@@ -195,7 +195,7 @@ These conditions are based upon the [certificates.k8s.io
 CertificateSigningRequest](https://github.com/kubernetes/api/blob/3a2d6b5bb7f84daa2125131865eb81b151448d5b/certificates/v1/types.go#L198)
 conditions of the same name. The purpose of these conditions is so that users,
 or "approvers", are able to mark a request as either Approved or Denied. This
-condition gates an Issuer from signing the request. An Issuer waits for a
+condition gates a signer from signing the request. A signer waits for a
 CertificateRequest to have an Approved condition before signing. A
 CertificateRequest with a Denied condition will never be signed.
 
@@ -205,7 +205,7 @@ The Approved and Denied conditions are two distinct condition types on the
 CertificateRequest. These conditions must always have the status of True, and
 are mutually exclusive (i.e. a CertificateRequest cannot have an Approved and
 Denied condition simultaneously). This behaviour is enforced in the cert-manager
-Webhook component.
+validating admission webhook.
 
 An "approver" is an entity that is responsible for setting the Approved/Denied
 conditions. It is up to the approver's implementation as to what
@@ -225,6 +225,15 @@ the team to who manually approved the request.
 
 ##### RBAC
 
+Approved and Denied conditions are set by requesting against the `/status`
+endpoint of the CertificateRequest resource. This is a divergence of the
+certificates.k8s.io CertificateSigningRequest resource that utilises `approval`,
+as CustomResourceDefinitions may [only define `/status` or `/scale`
+sub-resources](https://kubernetes.io/docs/tasks/extend-kubernetes/custom-resources/custom-resource-definitions/#subresources).
+Approvers must therefore have permissions to update the status sub-resource of
+CertificateSigningRequests. Approvers missing this permissions will have their
+request rejected by the API server.
+
 Setting the Approved or Denied conditions are restricted by the approver having
 sufficient RBAC permissions. These permissions are based upon the request
 itself- specifically the request's IssuerRef:
@@ -233,13 +242,18 @@ itself- specifically the request's IssuerRef:
 apiGroups: ["cert-manager.io"]
 resources: ["signers"]
 verbs: ["approve"]
-resourceNames: ["<issuer-kind>.<issuer-group>/<issuer-name or * for all issuer
-names>"]
+resourceNames:
+ # namesapced signers
+ - "<signer-resource-name>.<signer-group>/<signer-namespace>.<signer-name>"
+ # cluster scoped signers
+ - "<signer-resource-name>.<signer-group>/<signer-name>"
+ # all signers of this resource name
+ - "<signer-resource-name>.<signer-group>/*"
 ```
 
 An example ClusterRole that would grant the permissions to set the Approve and
-Denied conditions of CertificateRequests that reference the `MyIssuer` external
-issuer, in the group `my-example.io`, with the name `MyApp`:
+Denied conditions of CertificateRequests that reference the cluster scoped
+`myissuers` external issuer, in the group `my-example.io`, with the name `myapp`:
 
 ```
 apiVersion: rbac.authorization.k8s.io/v1
@@ -250,14 +264,18 @@ rules:
   - apiGroups: ["cert-manager.io"]
     resources: ["signers"]
     verbs: ["approve"]
-    resourceNames: ["myissuer.my-example.io/MyApp"]
+    resourceNames: ["myissuers.my-example.io/myapp"]
 ```
 
 These permissions are enforced using a
 [SubjectAccessReview](https://github.com/kubernetes/kubernetes/blob/b11d0fbdd58394a62622787b38e98a620df82750/pkg/apis/authorization/types.go#L27)
 that is performed in the cert-manager Webhook component when a user attempts to
-Approve or Deny a request. The user of the approver is tested along with the
-IssuerRef of the CertificateRequest.
+set the Approve or Denied condition. The user of the approver is tested along
+with the IssuerRef of the CertificateRequest.
+
+If the user does not have sufficient permissions defined above to set the
+Approved or Denied conditions, the request will be rejected by the cert-manager
+validating admission webhook.
 
 ###### Scope
 The RBAC permissions *must* be granted at the cluster scope (i.e.
@@ -265,9 +283,13 @@ ClusterRoleBinding). This matches the same scoping behaviour as
 [certificates.k8s.io
 CertificateSigningRequests](https://kubernetes.io/docs/reference/access-authn-authz/certificate-signing-requests/#authorization).
 
+Namespaced signers are represented by a namespaced resource using the syntax of
+`<signer-resource-name>.<signer-group>/<signer-namespace>.<signer-name>`
+
 ###### API Group
-The apiGroup must *always* be `cert-manage.io`, as all CertificateRequests are
-in the `cert-manager.io` group.
+The apiGroup must *always* be `cert-manager.io`, as all CertificateRequests are
+in the `cert-manager.io` group. Even though some signers may themselves not
+belong to the `cert-manager.io` group, the approve operation does.
 
 ###### Resource
 The resource must *always* be `signers`. This matches the same resource as
@@ -279,24 +301,47 @@ The verb must *always* be `approve`. This verb grants the approver the
 permissions to set *both* Approved and Denied conditions.
 
 ###### Resource Names
-The resource name is made up of 3 parts: the issuer kind, issuer group, and the
-issuer name.
+The resource name is made up of 3 parts: the signer resource name, signer group, and the
+signer name.
 
-The issuer kind must be lower case, i.e. "ClusterIssuer" would become
-"clusterissuer".
+The signer resource name should be the same string of the resource name of the
+signer.
 
-The issuer group should be the same string of the group of issuer.
+The signer group should be the same string of the group of signer.
 
-The name may be either a wild card '*' denoting all issuer names, or instead a
-string which must match the issuer name as it appears in the IssuerRef.
+The name may be either a wild card '*' denoting all signer names in all
+namespaces, or instead a string which must match optionally a namespace,
+followed by the signer name as it appears in the IssuerRef.
 
-An example of signing all `MyIssuer` issuers, and `ClusterMyIssuers` with the name
-`MyApp`, in the `my-example.io` group:
+An example of signing all `myissuer` signers in all namespaces, and
+`clustermyissuers` with the name `myppp`, in the `my-example.io` group:
 
 ```yaml
-    resourceNames: ["myissuer.my-example.io/*", "clustermyissuer.my-example.io/MyApp"]
+    resourceNames: ["myissuers.my-example.io/*", "clustermyissuers.my-example.io/myapp"]
 ```
 
+An example of signing `myissuer` with the name `myapp` in the namesapces `foo`
+and `bar`:
+
+```yaml
+    resourceNames: ["myissuers.my-example.io/foo.myapp", "myissuers.my-example.io/bar.myapp"]
+```
+
+##### Webhook signer string building
+
+The validating admission webhook is responsible for making SubjectAccessReviews
+to evaluate whether the user has [sufficient permissions to add the Approved or
+Denied conditions](#rbac). The webhook will attempt to first check whether the
+use can approve all signers in all namespaced (wildcard), and if this fails,
+whether it can approve for the exact signer (`.<signer-name>` or
+`<signer-namespace>.<signer-name>`).
+
+The webhook will keep a cache of the [Discovery
+API](https://github.com/kubernetes/client-go/blob/f6ce18ae578c8cca64d14ab9687824d9e1305a67/discovery/discovery_client.go#L55)
+which will be used to determine whether a referenced signer is namespaced or
+not. If it is namespaced, the `<signer-namespace>` will be populated with the
+namesapce that the CertificateRequest resides in. If the scope of the resource
+cannot be determined, the request will be rejected.
 
 
 ##### cert-manager Approver
@@ -305,15 +350,20 @@ The cert-manager controller is deployed with an internal approver controller.
 This controller will attempt to Approve *all* CertificateRequests that are
 created, regardless of its contents or IssuerRef.
 
-By default, this approver is given the permission to sign all internal issuers,
-that is `Issuer` and `ClusterIssuer` `cert-manager.io` issuers. External issuers
-may consider whether they wish to install further RBAC that would allow the
-cert-manager approver controller to also approve CertificateRequests that
-reference these external issuers.
+By default, this approver is given the permission to sign all internal signers,
+that is `Issuer` and `ClusterIssuer` `cert-manager.io` signers. This means its
+ClusterRole is given the `resourceNames`: `issuers.cert-manager.io/*` and
+`clusterissuers.cert-manager.io/*`
+
+External issuers may consider whether they wish to install further RBAC that
+would allow the cert-manager approver controller to also approve
+CertificateRequests that reference these external issuers. This would involve
+creating a ClusterRole that permits approving that signer type, and binding that
+role to the cert-manager-controller ServiceAccount.
 
 The default cert-manager approver controller may be disabled by adding the
 `--controllers=-certificaterequests-approver` argument to the
-`cert-manager-container` component. This allows for other approvers to make
+`cert-manager-controller` component. This allows for other approvers to make
 decisions about CertificateRequests, without racing against the internal
 approver controller.
 
