Updates table of contents
Signed-off-by: joshvanl <vleeuwenjoshua@gmail.com>

--- a/design/20190708.certificate-request-crd.md
+++ b/design/20190708.certificate-request-crd.md
@@ -34,6 +34,7 @@ status: implementable
         * [Resource](#resource)
         * [Verbs](#verbs)
         * [Resource Names](#resource-names)
+      - [Webhook signer string building](#webhook-signer-string-building)
       - [cert-manager Approver](#cert-manager-approver)
   * [Controller Behaviour](#controller-behaviour)
     + [ACME](#acme)
