Updates the example enabled controllers flag to correctly disable just the approver controller
Signed-off-by: joshvanl <vleeuwenjoshua@gmail.com>

--- a/design/20190708.certificate-request-crd.md
+++ b/design/20190708.certificate-request-crd.md
@@ -363,7 +363,7 @@ creating a ClusterRole that permits approving that signer type, and binding that
 role to the cert-manager-controller ServiceAccount.
 
 The default cert-manager approver controller may be disabled by adding the
-`--controllers=-certificaterequests-approver` argument to the
+`--controllers=*,-certificaterequests-approver` argument to the
 `cert-manager-controller` component. This allows for other approvers to make
 decisions about CertificateRequests, without racing against the internal
 approver controller.
