Adds that requests should be updated with a False Ready condition when Denied
Signed-off-by: joshvanl <vleeuwenjoshua@gmail.com>

--- a/design/20190708.certificate-request-crd.md
+++ b/design/20190708.certificate-request-crd.md
@@ -223,6 +223,10 @@ implementation of the approver. For example, the name of the resource that
 approves this request, the violations which caused the request to be denied, or
 the team to who manually approved the request.
 
+When a CertificateRequest has been Denied, it is the responsibility of the
+referenced issuer to then add a Ready condition with the status of "False",
+along with a relevant Reason and Message.
+
 
 ##### RBAC
 
