Change CR RBAC resource-name to resource-type
Signed-off-by: joshvanl <vleeuwenjoshua@gmail.com>

--- a/design/20190708.certificate-request-crd.md
+++ b/design/20190708.certificate-request-crd.md
@@ -249,11 +249,11 @@ resources: ["signers"]
 verbs: ["approve"]
 resourceNames:
  # namesapced signers
- - "<signer-resource-name>.<signer-group>/<signer-namespace>.<signer-name>"
+ - "<signer-resource-types>.<signer-group>/<signer-namespace>.<signer-name>"
  # cluster scoped signers
- - "<signer-resource-name>.<signer-group>/<signer-name>"
+ - "<signer-resource-types>.<signer-group>/<signer-name>"
  # all signers of this resource name
- - "<signer-resource-name>.<signer-group>/*"
+ - "<signer-resource-types>.<signer-group>/*"
 ```
 
 An example ClusterRole that would grant the permissions to set the Approve and
@@ -289,7 +289,7 @@ ClusterRoleBinding). This matches the same scoping behaviour as
 CertificateSigningRequests](https://kubernetes.io/docs/reference/access-authn-authz/certificate-signing-requests/#authorization).
 
 Namespaced signers are represented by a namespaced resource using the syntax of
-`<signer-resource-name>.<signer-group>/<signer-namespace>.<signer-name>`
+`<signer-resource-types>.<signer-group>/<signer-namespace>.<signer-name>`
 
 ###### API Group
 The apiGroup must *always* be `cert-manager.io`, as all CertificateRequests are
@@ -306,10 +306,10 @@ The verb must *always* be `approve`. This verb grants the approver the
 permissions to set *both* Approved and Denied conditions.
 
 ###### Resource Names
-The resource name is made up of 3 parts: the signer resource name, signer group, and the
+The resource name is made up of 3 parts: the signer resource type, signer group, and the
 signer name.
 
-The signer resource name should be the same string of the resource name of the
+The signer resource type should be the same string of the resource type of the
 signer.
 
 The signer group should be the same string of the group of signer.
