Change strings to be the yaml equivalent
Signed-off-by: joshvanl <vleeuwenjoshua@gmail.com>

--- a/design/20190708.certificate-request-crd.md
+++ b/design/20190708.certificate-request-crd.md
@@ -293,26 +293,26 @@ CertificateSigningRequests](https://kubernetes.io/docs/reference/access-authn-au
 Namespaced signers are represented by a namespaced resource using the syntax of
 `<signer-resource-types>.<signer-group>/<signer-namespace>.<signer-name>`
 
-###### API Group
+###### apiGroup
 
-The apiGroup must *always* be `cert-manager.io`, as all CertificateRequests are
-in the `cert-manager.io` group. Even though some signers may themselves not
+The `apiGroup` must *always* be `cert-manager.io`, as all CertificateRequests
+are in the `cert-manager.io` group. Even though some signers may themselves not
 belong to the `cert-manager.io` group, the approve operation does.
 
-###### Resource
+###### resource
 
-The resource must *always* be `signers`. This matches the same resource as
+The `resource` must *always* be `signers`. This matches the same resource as
 [required by certificates.k8s.io
 CertificateSigningRequests](https://kubernetes.io/docs/reference/access-authn-authz/certificate-signing-requests/#authorization).
 
-###### Verbs
+###### verbs
 
-The verb must *always* be `approve`. This verb grants the approver the
+The `verbs` must *always* be `approve`. This verb grants the approver the
 permissions to set *both* Approved and Denied conditions.
 
-###### Resource Names
+###### resourceNames
 
-The resource name is made up of 3 parts: the signer resource type, signer group, and the
+Each entry of `resourceNames` is made up of 3 parts: the signer resource type, signer group, and the
 signer name.
 
 The signer resource type should be the same string of the resource type of the
