--- a/design/20190708.certificate-request-crd.md
+++ b/design/20190708.certificate-request-crd.md
@@ -325,17 +325,27 @@ namespaces, or instead a string which must match optionally a namespace,
 followed by the signer name as it appears in the IssuerRef.
 
 An example of signing all `myissuer` signers in all namespaces, and
-`clustermyissuers` with the name `myppp`, in the `my-example.io` group:
+`clustermyissuers` with the name `myapp`, in the `my-example.io` group:
 
 ```yaml
-    resourceNames: ["myissuers.my-example.io/*", "clustermyissuers.my-example.io/myapp"]
+    resourceNames:
+    # With the following, the user (i.e., the approver) can approve the CertificateRequests
+    # that reference any namespaced-scoped issuer of the type MyIssuers, in the
+    # group my-example.io, in any namespace with any name:
+    - myissuers.my-example.io/*
+    # Similar to the above, but any cluster-scoped issuer of the type
+    # ClusterMyIssuer:
+    - clustermyissuers.my-example.io/myapp
 ```
 
-An example of signing `myissuer` with the name `myapp` in the namesapces `foo`
-and `bar`:
-
 ```yaml
-    resourceNames: ["myissuers.my-example.io/foo.myapp", "myissuers.my-example.io/bar.myapp"]
+    resourceNames:
+    # With the following, the user (i.e., the approver) can only approve the
+    # CertificateRequests in the namespace "foo" and that reference the
+    # namespace-scoped MyIssuer, in the group my-example.io, named "myapp":
+    - myissuers.my-example.io/foo.myapp
+    # Similar to the above, but in the namespace "bar":
+    - myissuers.my-example.io/bar.myapp
 ```
 
 ##### Webhook signer string building
@@ -358,8 +368,9 @@ cannot be determined, the request will be rejected.
 ##### cert-manager Approver
 
 The cert-manager controller is deployed with an internal approver controller.
-This controller will attempt to Approve *all* CertificateRequests that are
-created, regardless of its contents or IssuerRef.
+This controller will attempt to approve *all* CertificateRequests that are
+created, regardless of the contents of the request, or the issuer they
+reference.
 
 By default, this approver is given the permission to approve all internal
 signers, that is `Issuer` and `ClusterIssuer` `cert-manager.io` signers. This
@@ -428,12 +439,14 @@ External issuers that do not honour Denied conditions will sign
 CertificateRequests, even if they have a Denied condition set. In this case, the
 issuing controller will successfully complete the issuance of the Certificate.
 
-External Issuers and internal issuer that honour the Denied condition will never
-sign CertificateRequests with the Denied condition set, and thus never set the
+
+External Issuers and internal issuers that honour the Denied condition will
+never sign CertificateRequests with the Denied condition set, and thus never set
 Ready condition. In this case, the issuing controller will consider this
-CertificateRequest as failed, set the Issuing condition to False, and set the
-last failure time. This will cause the issuance to be retried at a later date (1
-hour). This is done for a number of reasons:
+CertificateRequest as failed, and will set the condition `Issuing=False`
+as well as setting the status field `lastFailureTime`. Note that the issuing
+controller is not responsible for setting the `Ready=False` condition on
+the CertificateRequests; that's the issuer's responsibility.
 
 - The Certificate is clearly reported as Failed to users who may miss the
     Denied request from a cursory view.
