Update design with review comments
Signed-off-by: joshvanl <vleeuwenjoshua@gmail.com>

--- a/design/20220118.server-side-apply.md
+++ b/design/20220118.server-side-apply.md
@@ -93,6 +93,25 @@ readable name that describes that component, and is used for both its user agent
 and field manager. Using the same name enables better auditing trails that helps
 debugging and improves telemetry.
 
+#### Known Field Managers
+
+This is the list of known field managers. This might not be an exhaustive list
+as they will be discovered during the changes.
+
+```text
+cert-manager # base field manager of cert-manager controller, used when no distinct component
+cert-manager-leader-election
+cert-manager-acme-[orders,challenges]
+cert-manager-certificates-[issuing,trigger,keymanager,readiness]
+cert-manager-certificaterequests-[acme,approver,ca,selfsigned,vault,venafi]
+cert-manager-clusterissuers-[acme,ca,selfsigned,vault,venafi]
+cert-manager-issuers-[acme,ca,selfsigned,vault,venafi]
+cert-manager-cainjector # base field manager of cert-manager ca-injector
+cert-manager-webhook # base field manager of cert-manager webhook
+cert-manager-cmctl
+```
+
+
 ### Scheme
 
 ### Field Manager
@@ -132,20 +151,27 @@ All CREATE and UPDATE operations in cert-manager controllers are to be replaced
 with APPLY. For this change, controllers will need to be modified so that for
 these calls, _only_ the fields in which they manage should be included in the
 PATCH API call. This means each controller will need to define exactly which
-fields they are concerned with.
+fields they are concerned with. A package will be created which all API calls
+will use. This package will implement the logic for checking the feature gate
+for consistency across the project whilst minimising disruption to existing code
+paths.
 
 Some fields, such as the Certificate Issuing Condition are managed by more than
-one controller (issuing and trigger Certificate controllers), and as such, will
-need to make use of the `force` option in their API calls. This option tells the
-API server to revoke management of that field from the previous owner, overwrite
-the field, and change owner ship to the new client.
+one controller (issuing and trigger Certificate controllers, and cmctl), and as
+such, will need to make use of the `force` option in their API calls. This
+option tells the API server to revoke management of that field from the previous
+owner, overwrite the field, and change owner ship to the new client. Since some
+fields, such as the Issuing Condition, may have an undefined number of potential
+managers (both internal and external to the cert-manager controller), using the
+same manager for things is not a possibility.
 
 The [fake client-go client](https://github.com/kubernetes/client-go/issues/970)
 does not support the Apply patch call for mocking API calls and events. This
 means that significant controller unit-testing will either need to moved to
 testing against a real API server as integration tests, the controller
 [test framework must add custom support for Apply](https://github.com/jetstack/cert-manager/blob/master/pkg/controller/test/context_builder.go),
-or a new testing framework should be developed.
+or a new testing framework should be developed. We can also PR this upstream but
+will take time to be released so a stop gap would always be needed.
 
 Some API fields will need to have some metadata updated to function better under
 Server Side Apply. One such example is adding `x-kubernetes-list-type=map` and
@@ -153,15 +179,19 @@ Server Side Apply. One such example is adding `x-kubernetes-list-type=map` and
 slice](https://github.com/jetstack/cert-manager/blob/0ca1ce9a6a1d7c311afd4b3e786975759249132a/pkg/apis/certmanager/v1/types_certificate.go#L385),
 so that controllers are able to apply distinct condition types, without
 conflicting with other controller conditions (i.e. the Ready and Issuing
-conditions).
+conditions). Integration tests will be able to ensure cert-manager have set
+these API type tags correctly.
 
 ## Feature Gate
 
-Placing the APPLY functionality behind a feature gate should be considered.
+Placing the APPLY functionality behind a feature gate should be required.
 Placing this functionality behind a feature gate would allow the cert-manager
 authors gain confidence about its correctness, and ensure there are no
 regressions in the stability of controller reconciliation.
 
 To reach graduation, the cert-manager authors should consider the server side
-apply implementation for cert-manager to be safe for end users. Graduation
-should ideally be done over no more than one or two releases.
+apply implementation for cert-manager to be safe for end users. One strategy for
+gaining confidence that it is a safe change is to solicit feedback from end
+users who have the feature enabled. Graduation should ideally be done over no
+more than one or two releases, however the project shouldn't proceed with
+removing the gate until the authors are confident.
