Adds comments for force section
Signed-off-by: joshvanl <vleeuwenjoshua@gmail.com>

--- a/design/20220118.server-side-apply.md
+++ b/design/20220118.server-side-apply.md
@@ -21,11 +21,17 @@ status: implementable
   * [Conflicts](#conflicts)
   * [Deleting Fields](#deleting-fields)
 - [Field Manager and User Agent](#field-manager-and-user-agent)
+    + [Known Field Managers](#known-field-managers)
   * [Scheme](#scheme)
   * [Field Manager](#field-manager)
   * [User Agent](#user-agent)
 - [Implementation Consideration](#implementation-consideration)
+  * [API Call Code Changes](#api-call-code-changes)
+  * [Force parameter](#force-parameter)
+  * [client-go Testing](#client-go-testing)
+  * [API Changes](#api-changes)
 - [Feature Gate](#feature-gate)
+- [Migration](#migration)
 <!-- /toc -->
 
 ## Summary
@@ -147,6 +153,8 @@ cert-manager-certificates-issuing/v1.7.0 (Linux/amd64) cert-manager/0b686b8f38c8
 
 ## Implementation Consideration
 
+### API Call Code Changes
+
 All CREATE and UPDATE operations in cert-manager controllers are to be replaced
 with APPLY. For this change, controllers will need to be modified so that for
 these calls, _only_ the fields in which they manage should be included in the
@@ -156,14 +164,36 @@ will use. This package will implement the logic for checking the feature gate
 for consistency across the project whilst minimising disruption to existing code
 paths.
 
+### Force parameter
+
 Some fields, such as the Certificate Issuing Condition are managed by more than
 one controller (issuing and trigger Certificate controllers, and cmctl), and as
-such, will need to make use of the `force` option in their API calls. This
+such, will need to make use of the `force` parameter in their API calls. This
 option tells the API server to revoke management of that field from the previous
 owner, overwrite the field, and change owner ship to the new client. Since some
 fields, such as the Issuing Condition, may have an undefined number of potential
 managers (both internal and external to the cert-manager controller), using the
-same manager for things is not a possibility.
+same manager for things is not a possibility. You can read more about the
+`force` paramerter on the Kubernetes documentation on
+[Server Side Apply](https://kubernetes.io/docs/reference/using-api/server-side-apply/),
+and in particular the
+[Conflicts](https://kubernetes.io/docs/reference/using-api/server-side-apply/#conflicts)
+section.
+
+Use of the `force` parameter will not overwrite other controllers progress
+since, 1 controllers only update the fields that they manage, 2 controllers who
+manage the same fields should never be writing to the same field at the same
+time (as they should be gated by those or other fields presence and values, such
+as the Issuing condition for the issuing and trigger controllers).
+
+There is likely no APPLY call that cert-manager does not set the `force`
+parameter to true since it, [never wants to give up ownership claim, and always
+wants to overwrite
+values](https://kubernetes.io/docs/reference/using-api/server-side-apply/#conflicts).
+See
+[here](https://kubernetes.io/docs/reference/using-api/server-side-apply/#using-server-side-apply-in-a-controller).
+
+### client-go Testing
 
 The [fake client-go client](https://github.com/kubernetes/client-go/issues/970)
 does not support the Apply patch call for mocking API calls and events. This
@@ -172,6 +202,8 @@ testing against a real API server as integration tests, the controller
 [test framework must add custom support for Apply](https://github.com/jetstack/cert-manager/blob/master/pkg/controller/test/context_builder.go),
 or a new testing framework should be developed. We can also PR this upstream but
 will take time to be released so a stop gap would always be needed.
+
+### API Changes
 
 Some API fields will need to have some metadata updated to function better under
 Server Side Apply. One such example is adding `x-kubernetes-list-type=map` and
