Remove reference to event that shows when the next issuance will be attempted
The event did not seem that useful. Manually triggered (and failed reissuance attempt can result in multiple events on a Certificate each showing different renewal timestamp which seems confusing. Also events are short lived, so not that useful to someone debugging few hours after failure

Signed-off-by: irbekrm <irbekrm@gmail.com>

--- a/design/20220118.certificate-issuance-exponential-backoff.md
+++ b/design/20220118.certificate-issuance-exponential-backoff.md
@@ -79,7 +79,6 @@ Similarly to [`status.LastFailureTime`](https://github.com/jetstack/cert-manager
 `IssuanceAttempts` will be set by [`certificates-issuing` controller](https://github.com/jetstack/cert-manager/tree/ce1424162ea4f363bdb7aa4f201432ec63da1145/pkg/controller/certificates/issuing) after a failed issuance by either bumping the already existing value by 1 or setting it to 1 (first failure). In case of a succeeded issuance, `certificates-issuing` controller will ensure that `status.IssuanceAttempts` is not set.
 
 The delay till the next issuance will then be calculated by [`certificates-trigger` controller](https://github.com/jetstack/cert-manager/tree/ce1424162ea4f363bdb7aa4f201432ec63da1145/pkg/controller/certificates/trigger) using the formula `if status.LastFailureTime != nil then next_issuance_attempt_time = status.LastFailureTime + time.Hour x 2 ^ (status.IssuanceAttempts- 1)` (binary exponential- so the sequence will be 1h, 2h, 4h, 8h etc). This ensures that the first delay is 1 hour from the last failure time which is the current behaviour. In case of continuous failures, the delay should keep increasing up to a maximum backoff period of 32h, after which it should be retried every 32h whilst the failures persist.
-`certificates-trigger` controller should also throw an event on the `Certificate` with a message that includes the calculated delay period.
 
 ### API changes
 
@@ -175,9 +174,6 @@ Status:
   LastFailureTime: <timestamp> # Last failed issuance (i.e when a `CertificateRequest` failed)
   Revision: 19
 Events:
-  Type    Reason         Age   From          Message
-  ----    ------         ----  ----          -------
-  Warning IssuanceFailed  4s  cert-manager   Certificate issuance has failed. It will be retried in 4 hours.
   ```
 
 2. A `Certificate` where the latest issuance succeeded and no issuances are being attempted now:
@@ -213,7 +209,7 @@ To ensure that `Certificate`s whose issuance is currently failing don't get rene
 
 - 32h is an acceptable maximum delay between issuances
 
-- In case of exponential backoff being applied, an event on the `Certificate` as well as controller logs will be sufficient for users trying to debug this
+- In case of exponential backoff being applied, controller logs will be sufficient for users trying to debug this and understand when the next issuance will be attempted
 
 ## Feature Gate
 
